--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"react-scripts": "5.0.0",
 		"react-step-range-slider": "^1.4.1",
 		"typescript": "^4.5.4",
-		"web-vitals": "^2.1.3"
+		"web-vitals": "^2.1.3",
+		"webfontloader": "^1.6.28"
 	},
 	"scripts": {
 		"start": "react-scripts start",
