--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,22 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+	"short_name": "CryptoNytCalculator",
+	"name": "CryptoNytCalculator",
+	"description": "A crypto calculator made by Phibee Deinla #malasakit",
+	"permissions": ["activeTab"],
+	"background": {
+		"scripts": ["chrome.js"]
+	},
+	"version": "1.0.0",
+	"version_name": "1.0.0",
+	"manifest_version": 2,
+	"icons": {
+		"16": "cryptocalc-logo.png",
+		"32": "cryptocalc-logo.png",
+		"48": "cryptocalc-logo.png",
+		"128": "cryptocalc-logo.png"
+	},
+	"browser_action": {
+		"default_icon": "cryptocalc-logo.png"
+	},
+	"content_security_policy": "script-src 'self' 'sha256-7APfBwJU2X0MwNK+ga5tW6mGPddYdnj/mTQ8BJwejp4='; object-src 'self'; img-src https://api.faviconkit.com;"
 }
