--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-dom": "^17.0.2",
 		"react-scripts": "5.0.0",
 		"react-step-range-slider": "^1.4.1",
+		"styled-components": "^5.3.3",
 		"typescript": "^4.5.4",
 		"web-vitals": "^2.1.3",
 		"webfontloader": "^1.6.28"
