--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,19 +4,24 @@
 	"description": "A crypto calculator made by Phibee Deinla #malasakit",
 	"permissions": ["activeTab"],
 	"background": {
-		"scripts": ["chrome.js"]
+		"service_worker": "chrome.js"
 	},
 	"version": "1.0.0",
 	"version_name": "1.0.0",
-	"manifest_version": 2,
+	"manifest_version": 3,
 	"icons": {
 		"16": "cryptocalc-logo.png",
 		"32": "cryptocalc-logo.png",
 		"48": "cryptocalc-logo.png",
 		"128": "cryptocalc-logo.png"
 	},
-	"browser_action": {
+    "web_accessible_resources":[
+        {
+            "matches": ["<all_urls>"],
+            "resources": ["index.html"]
+        }
+      ],
+	"action": {
 		"default_icon": "cryptocalc-logo.png"
-	},
-	"content_security_policy": "script-src 'self' 'sha256-7APfBwJU2X0MwNK+ga5tW6mGPddYdnj/mTQ8BJwejp4='; object-src 'self'; img-src https://api.faviconkit.com;"
+	}
 }
